--- a/package.json
+++ b/package.json
@@ -13,19 +13,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "1.5.0",
-    "@angular/compiler-cli": "^5.0.0",
     "@angular/animations": "^5.0.0",
+    "@angular/cli": "1.5.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "jquery": "^3.2.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
